--- a/templates/view_registrations.html
+++ b/templates/view_registrations.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View Registrations - Kalai Thiruvizha 25</title>
+    <title>View Registrations - KALLOORI KALAI THIRUVIZHA 25</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
-        <h1>📋 Kalai Thiruvizha - 25 Registrations</h1>
+        <h1>KALLOORI KALAI THIRUVIZHA - 25 Registrations</h1>
         
         <div style="text-align: center; margin-bottom: 20px;">
             <a href="{{ url_for('index') }}" class="btn-submit">➕ New Registration</a>
