--- a/templates/view_teams.html
+++ b/templates/view_teams.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View Teams - Kalai Thiruvizha 25</title>
+    <title>View Teams -KALLOORI KALAI THIRUVIZHA 25</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <style>
         .team-card {
@@ -174,7 +174,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>👥 Team Registrations - Kalai Thiruvizha 25</h1>
+        <h1>👥 Team Registrations -KALLOORI KALAI THIRUVIZHA 25</h1>
         
         <div class="navigation-buttons">
             <a href="{{ url_for('index') }}" class="btn-submit">➕ New Registration</a>
