--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
 
                 <div class="form-group">
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="name"placeholder="Enter your Namer"  required>
+                    <input type="text" id="name" name="name" placeholder="Enter your Namer"  required>
                 </div>
 
                 <div class="form-group">
@@ -91,8 +91,7 @@
 
                 <div class="form-group">
                     <label for="phone_number">Phone Number:</label>
-                    <input type="tel" id="phone_number" name="phone_number" pattern="[0-9]{10}" required>
-                    <small>Enter 10-digit phone number</small>
+                    <input type="tel" id="phone_number" name="phone_number" pattern="[0-9]{10}" placeholder="Enter your Phone number" required> 
                 </div>
 
             </div>
@@ -203,11 +202,11 @@
                         <h4>Member ${i}</h4>
                         <div class="form-group">
                             <label>Register No:</label>
-                            <input type="text" name="register_no_${i}" required>
+                            <input type="text" name="register_no_${i}" placeholder="Enter your Register number" required>
                         </div>
                         <div class="form-group">
                             <label>Name:</label>
-                            <input type="text" name="name_${i}" required>
+                            <input type="text" name="name_${i}" placeholder="Enter your Namer" required>
                         </div>
                         <div class="form-group">
                             <label>Year:</label>
@@ -243,9 +242,9 @@
 
                          <div class="form-group">
                             <label>Phone Number:</label>
-                            <input type="tel" name="phone_number_${i}" pattern="[0-9]{10}" required>
+                            <input type="tel" name="phone_number_${i}" pattern="[0-9]{10}" placeholder="Enter your Phone number" required>
                         </div>
-                        
+
                         <hr>
                     `;
                     groupFields.appendChild(memberDiv);
