--- a/static/style.css
+++ b/static/style.css
@@ -34,7 +34,7 @@ body {
     background: var(--white);
     padding: 2rem;
     border-radius: 12px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 h1 {
@@ -69,6 +69,7 @@ label {
 
 input[type="text"],
 input[type="number"],
+input[type="tel"],
 select {
     width: 100%;
     padding: 0.75rem 1rem;
@@ -123,6 +124,7 @@ select:focus {
     margin-bottom: 1.5rem;
     border-left: 4px solid var(--primary-blue);
     border: 1px solid var(--border-color);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 }
 
 /* Alerts */
@@ -437,6 +439,8 @@ select:focus {
     .btn-secondary {
         width: 100%;
         margin: 0.125rem 0;
+        border-radius: 20px;
+        margin-top: 10px;
     }
 }
 
@@ -500,3 +504,27 @@ select:focus {
     color: #d97706;
     border: 1px solid #fcd34d;
 }
+  .description {
+    overflow: hidden;
+    white-space: nowrap;
+    background: #fff8e1;
+    border-left: 4px solid #ffb300;
+    padding: 10px 12px;
+    font-weight: 600;
+    margin-bottom: 40px;
+  }
+
+  .marquee {
+    display: inline-block;
+    padding-left: 100%;
+    animation: scroll-left 18s linear infinite;
+  }
+
+  .marquee:hover { /* pause on hover */
+    animation-play-state: paused;
+  }
+
+  @keyframes scroll-left {
+    0%   { transform: translateX(0); }
+    100% { transform: translateX(-100%); }
+  }
