--- a/templates/index.html
+++ b/templates/index.html
@@ -227,7 +227,7 @@
                                 <option value="EEE">Electrical and Electronics Engineering</option>
                                 <option value="MECH">Mechanical Engineering</option>
                                 <option value="CIVIL">Civil Engineering</option>
-                                <option value="IT">Information Technology</option>
+                                <option value="MCT">Mechatronics</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -322,3 +322,4 @@
 
 </body>
 </html>
+
